apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/instance: sonarr
